Fix toolbar scrolling out of view

--- a/src/components/Gallery/Gallery.module.css
+++ b/src/components/Gallery/Gallery.module.css
@@ -1,6 +1,6 @@
 .gallery {
 	display: flex;
 	flex-wrap: wrap;
-	height: 100vh;
+	height: 100%;
 	overflow-y: scroll;
 }
