--- a/src/components/PhotoTaggerApp/PhotoTaggerApp.module.css
+++ b/src/components/PhotoTaggerApp/PhotoTaggerApp.module.css
@@ -2,7 +2,8 @@
 	display: grid;
 	grid-template-columns: 2.25fr 0.75fr;
 	grid-template-rows: 50px 1fr;
-	max-width: 100vw;
+	height: 100vh;
+	width: 100vw;
 }
 
 .toolbar {
